--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Fundoo</title>
-    <link
+    <!-- <link
 rel="stylesheet"
 href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
-/>
+/> -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
@@ -42,7 +42,7 @@ href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script
+    <!-- <script
 type="text/javascript"
 src="../node_modules/jquery/dist/jquery.slim.min.js"
 ></script>
@@ -53,6 +53,6 @@ src="../node_modules/tether/dist/js/tether.min.js"
 <script
 type="text/javascript"
 src="../node_modules/bootstrap/dist/js/bootstrap.min.js"
-></script>
+></script> -->
   </body>
 </html>
